# flower_marketplace_fastapi

app/: flowers_repository.py  main.py  purchases_repository.py  pyproject.toml  users_repository.py
app/templates/: login.html  purchases.html  signup.html  user.html
app/templates/flowers/: cart_items.html  flowers.html
app/tests/: test_task_3.py  test_task_4.py
tests/: test_task_1.py  test_task_2.py
